# holocure-p2p

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build.sh  manifest.json  setup_cmake.sh  setup_vs.bat
.github/workflows/: build.yml
include/Aurie/: shared.hpp
scripts/: get_dll.sh  query_manifest.sh  update_compile_commands.sh
src/: ModuleMain.cpp
